PIL-1840 - Updated validation (#116)
Add field validation to ORN APIs

---------
